--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 waitress==1.1.0
-masonite==2.0.10
-slugify
-raven
-masonite-billing
+masonite==2.0.12
 gunicorn
+masonite_cli
+masonite_deploy==0.0.1
+masonite-billing
 masonite-dashboard
+psycopg2-binary
 pyjwt
+raven
+slugify
+
